--- a/src/app/components/search-form/search-form.component.html
+++ b/src/app/components/search-form/search-form.component.html
@@ -1,21 +1,22 @@
 <section class="products-search p-3 rounded shadow">
-  <form role="form">
+  <form [formGroup]="searchForm">
     <div class="form-row">
       <div class="col-lg-4">
         <label for="byModel">Search by Laptop Model:</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" formControlName="model">
       </div>
       <div class="col-lg-8">
         <label for="dateFrom">Date from / to:</label>
         <input type="text"
            placeholder="Daterangepicker"
            class="form-control"
-           bsDaterangepicker>
+           bsDaterangepicker
+           formControlName="dateFromTo">
       </div>
     </div>
     <div class="form-row">
       <div class="col-lg-12 py-3">
-        <button class="btn btn-primary shadow-sm float-right">Search laptops</button>
+        <button class="btn btn-primary shadow-sm float-right" (click)="submitForm()">Search laptops</button>
       </div>
     </div>
   </form>
