Product page detail with integration to service

--- a/src/app/components/result-list/result-list.component.html
+++ b/src/app/components/result-list/result-list.component.html
@@ -1,5 +1,5 @@
-<section class="result-list mt-4 p-3 rounded shadow"*ngIf="products.length > 0">
-  <h3>
+<section class="result-list my-4 p-3 rounded shadow"*ngIf="products.length > 0">
+  <h3 class="title">
     We found {{products.length}} results with your criteria <small>filter your results</small>
   </h3>
   <div class="row">
