--- a/src/app/views/product-details/product-details.component.html
+++ b/src/app/views/product-details/product-details.component.html
@@ -1,3 +1,21 @@
-<p>
-  product-details works!
-</p>
+<section class="product-details">
+
+  <h3 class="title mt-4">
+    {{product.name}}
+  </h3>
+  Sold at: {{product.dateOfPurchase | date: 'dd/MM/yyyy hh:mm:ss'}}
+  <div class="information-box p-3 my-4 shadow rounded">
+    <div class="row">
+      <div class="col-12 col-lg-4">
+        <app-product-image [productImage]="product.imageUrl"></app-product-image>
+      </div>
+      <div class="col-12 col-lg-8">
+        <app-product-specs [productSpecs]="product.specs"></app-product-specs>
+      </div>
+      <div class="col-12 col-lg-12">
+        <h3 class="title">Description</h3>
+        <app-product-description [productDescription]="product.description"></app-product-description>
+      </div>
+    </div>
+  </div>
+</section>
