Some styles updates

--- a/src/app/components/product-description/product-description.component.html
+++ b/src/app/components/product-description/product-description.component.html
@@ -1,21 +1,1 @@
-<div class="bg-white p-3 rounded shadow-sm">
-  <b class="text-center">
-    Physical Characteristics
-  </b>
-  <p class="justify-content">
-    The MacBook is carved out of solid aluminum, thus giving it a distinctive look and a grayish-white hue.
-    The MacBook Air in particular has a thin and light design. There are two versions of the MacBook Air: the 11-inch,
-    with an 11.6-inch screen; and the 13-inch, with a 13.3-inch screen. Apple splits the MacBook Pro into a 13-inch and a 15-inch,
-    with the latter consisting of a 15.4-inch screen. Each computer has a full-size, backlit 78-key keyboard.
-  </p>
-  <b class="text-center">
-    Operating Specifications
-  </b>
-  <p class="justify-content">
-    Apple bundles each MacBook with the OS X operating system. On each computer there's a dual-core processor
-    from Intel’s Intel Core brand, with Turbo Boost technology for increased performance.
-    Each MacBook Air gets a mid-range Intel Core i5, with a processing speed of 1.7 or 1.8 GHz.
-    The 13-inch MacBook Pro has a 2.5- or 2.9-GHz chip, while the one on the 15-inch MacBook Pro is a more powerful but slower 2.3 GHz quad-core Intel Core i7.
-    Peak installed memory on the MacBook Air is 8GB, with 1600MHz DDR3 architecture.
-  </p>
-</div>
+<div class="bg-white p-3 rounded shadow-sm" [innerHTML]="descriptionContent"></div>
