--- a/src/app/views/product-details/product-details.component.html
+++ b/src/app/views/product-details/product-details.component.html
@@ -1,13 +1,20 @@
 <section class="product-details">
 
-  <h3 class="title mt-4">
-    {{product.name}}
-  </h3>
-  Sold at: {{product.dateOfPurchase | date: 'dd/MM/yyyy hh:mm:ss'}}
+  <div class="product-title bg-warning text-white p-3 rounded shadow my-4">
+    <h3 class="title">
+      {{product.name}}
+    </h3>
+    Sold at: {{product.dateOfPurchase | date: 'dd/MM/yyyy hh:mm:ss'}}
+  </div>
   <div class="information-box p-3 my-4 shadow rounded">
     <div class="row">
       <div class="col-12 col-lg-4">
         <app-product-image [productImage]="product.imageUrl"></app-product-image>
+        <h1>
+          <span class="badge badge-primary">
+            <b>Price:</b> {{product.price | currency:'PLN':'symbol':'4.2-2'}}
+          </span>
+        </h1>
       </div>
       <div class="col-12 col-lg-8">
         <app-product-specs [productSpecs]="product.specs"></app-product-specs>
