--- a/src/app/components/search-summary/search-summary.component.html
+++ b/src/app/components/search-summary/search-summary.component.html
@@ -1,5 +1,9 @@
-<section class="search-summary bg-warning rounded shadow-sm my-4 p-3">
-
-  summary
-
+<section class="search-summary bg-warning rounded shadow p-3 pb-0">
+  <h3>Summary</h3>
+  <p>
+    <b>Number of sold products: </b> {{items.length}}
+  </p>
+  <p class="mb-0">
+    <b>Total sales value: </b> {{totalDisplayedValue}}
+  </p>
 </section>
