--- a/src/app/components/products-filter/products-filter.component.html
+++ b/src/app/components/products-filter/products-filter.component.html
@@ -1,4 +1,4 @@
-<div class="filter bg-info rounded p-3 mb-4">
+<div class="filter bg-info shadow-sm rounded p-3 mb-4">
   <h4>Filter by:</h4>
   <form [formGroup]="filterForm">
     <div class="form-row">
