--- a/src/app/components/search-summary/search-summary.component.html
+++ b/src/app/components/search-summary/search-summary.component.html
@@ -1,4 +1,4 @@
-<section class="search-summary bg-warning rounded shadow p-3 pb-0">
+<section class="search-summary bg-warning rounded shadow-sm p-3 pb-0">
   <h3>Summary</h3>
   <p>
     <b>Number of sold products: </b> {{items.length}}
