--- a/src/app/views/products-list/products-list.component.html
+++ b/src/app/views/products-list/products-list.component.html
@@ -7,13 +7,10 @@
         <app-products-filter (fetchFormData)="applyFilter($event)"></app-products-filter>
       </div>
     </div>
+    <h6 class="bg-primary p-2 text-center text-white rounded shadow-sm">
+      In order to filter the list, please provide the full model name.
+    </h6>
     <div class="table-responsive">
-
-      <h5>
-        <span class="badge badge-primary">
-          <i class="fas fa-info"></i> In order to filter the list, please provide the full model name.
-        </span>
-      </h5>
       <table class="table table-striped shadow-sm">
         <thead>
           <tr>
